--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/pratik9333/INNOVATOR_1#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.29.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^14.2.0",
@@ -27,10 +28,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
     "morgan": "^1.10.0",
-    "bcryptjs": "^2.4.3",
     "nanoid": "^3.2.0",
+    "node-fetch": "^3.2.3",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
+    "pupeteer": "^0.0.1",
     "redis": "^3.0.0",
     "validator": "^13.7.0"
   }
