--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "type": "git",
     "url": "git+https://github.com/pratik9333/INNOVATOR_1.git"
   },
-  
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -22,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.29.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
