--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-fileupload": "^1.2.1",
+    "express-rate-limit": "^6.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
     "morgan": "^1.10.0",
@@ -35,6 +36,7 @@
     "nodemon": "^2.0.15",
     "pupeteer": "^0.0.1",
     "redis": "^3.0.0",
+    "toad-scheduler": "^1.6.0",
     "validator": "^13.7.0"
   }
 }
