FEATURE: added codechef platform

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "pupeteer": "^0.0.1",
+    "puppeteer": "^13.6.0",
     "redis": "^3.0.0",
     "toad-scheduler": "^1.6.0",
     "validator": "^13.7.0"
