--- a/.github/workflows/scheduled.yaml
+++ b/.github/workflows/scheduled.yaml
@@ -8,7 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Hourly cron job
-        run: |
-          curl --request PUT \
-          --url 'https://social-coding-experience.vercel.app/api/task' \ 
-          --header 'Authorization: Bearer ${{ secrets.APP_KEY }}'
+        run: "curl --request PUT  --url 'https://social-coding-experience.vercel.app/api/task' --header 'Authorization: Bearer ${{ secrets.APP_KEY }}'"
