--- a/package.json
+++ b/package.json
@@ -20,18 +20,19 @@
   "homepage": "https://github.com/pratik9333/INNOVATOR_1#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
     "cloudinary": "^1.29.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "chai": "^3.5.0",
-    "chai-http": "^2.0.1",
-    "mocha": "^2.4.5",
     "dotenv": "^14.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-fileupload": "^1.2.1",
     "express-rate-limit": "^6.3.0",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^2.4.5",
+    "mongodb": "^4.13.0",
     "mongoose": "^6.1.7",
     "morgan": "^1.10.0",
     "nanoid": "^3.2.0",
