--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development nodemon index.js",
-    "test": "NODE_ENV=development mocha --timeout 10000"
+    "test": "NODE_ENV=test mocha --timeout 10000"
   },
   "repository": {
     "type": "git",
