--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -18,5 +18,14 @@ services:
       - "27017:27017"
     networks:
       - webnet
+  mongo-express:
+    image: mongo-express
+    networks:
+      - webnet
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      - ME_CONFIG_MONGODB_SERVER=mongo
 networks:
   webnet:
