replaced cheeriofrom Puppeteer to scrape codechef profile data

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
+    "cheerio": "^1.0.0-rc.12",
     "cloudinary": "^1.29.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -43,6 +44,7 @@
     "pupeteer": "^0.0.1",
     "puppeteer": "^13.6.0",
     "redis": "^3.0.0",
+    "request-promise": "^4.2.6",
     "supertest": "^6.3.3",
     "toad-scheduler": "^1.6.0",
     "validator": "^13.7.0"
